projects/raaga/portal-react/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-react
  name: portal-react
  namespace: raaga-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-react
  template:
    metadata:
      labels:
        app: portal-react
    spec:
      containers:
        - image: registry.coherent.in/raaga-web-portal:30
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200"
              memory: "400Mi"
          imagePullPolicy: Always
          name: portal-react
      imagePullSecrets:
        - name: registry-regcred
