projects/raaga/portal-react/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-react
  namespace: raaga-dev
  labels:
    app: portal-react
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        -  raaga-react-dev.coherent.in
      secretName: portal-react-tls
  rules:
    - host: "raaga-react-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-react-svc
                port:
                  number: 80
